--- a/index.html
+++ b/index.html
@@ -3,44 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | GLTF_Loader</title>
+    <title>Unity WebGL Player | Textures</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <style>
       body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
       }
       #unity-container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       }
       #unity-canvas {
-        width: 100%;
-        height: 100%;
-        background-color: black;
+      width: 100%;
+      height: 100%;
+      background-color: black;
       }
       #unity-footer {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        z-index: 10;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      z-index: 10;
       }
       #unity-webgl-logo, #unity-fullscreen-button {
-        display: none;
-      }
-      #fileInput {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        z-index: 20;
-        padding: 10px;
-        cursor: pointer;
+      display: none;
       }
     </style>
   </head>
@@ -53,20 +45,27 @@
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-warning"></div>
+      <div id="unity-warning"> </div>
+      <!-- <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">GLTF_Loader</div>
+      </div> -->
     </div>
-
-    <!-- File Input for Loading 3D Models -->
-    <!-- <input type="file" id="fileInput" accept=".gltf,.glb,.fbx" /> -->
-
     <script>
-      // Unity-related setup
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -77,7 +76,7 @@
         if (type == 'error') div.style = 'background: red; padding: 10px;';
         else {
           if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function () {
+          setTimeout(function() {
             warningBanner.removeChild(div);
             updateBannerVisibility();
           }, 5000);
@@ -85,14 +84,12 @@
         updateBannerVisibility();
       }
 
-      var unityInstance = null; // Declare UnityInstance globally
-
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/ModelLoader.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/ModelLoader.data",
+        frameworkUrl: buildUrl + "/ModelLoader.framework.js",
+        codeUrl: buildUrl + "/ModelLoader.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "interioverse",
         productName: "GLTF_Loader",
@@ -100,16 +97,30 @@
         showBanner: unityShowBanner,
       };
 
+      // By default Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
+
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
+
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+        // unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
         canvas.style.width = "100%";
         canvas.style.height = "100%";
       }
@@ -121,65 +132,16 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-        }).then((instance) => {
-          unityInstance = instance; // Assign UnityInstance for global access
+        }).then((unityInstance) => {
           loadingBar.style.display = "none";
+          // fullscreenButton.onclick = () => {
+          //   unityInstance.SetFullscreen(1);
+          // };
         }).catch((message) => {
           alert(message);
         });
       };
       document.body.appendChild(script);
-
-      // function fileToByteArray(file) {
-      //     return new Promise((resolve, reject) => {
-      //         const reader = new FileReader();
-      //         reader.onload = () => {
-      //             resolve(new Uint8Array(reader.result));
-      //         };
-      //         reader.onerror = reject;
-      //         reader.readAsArrayBuffer(file);
-      //     });
-      // }
-
-      // // Usage example
-      // const inputFile = document.getElementById('fileInput'); // HTML file input element
-      // inputFile.addEventListener('change', async (event) => {
-      //     const file = event.target.files[0];
-      //     if (file) {
-      //       const byteArray = await fileToByteArray(file);
-      //       console.log("Byte array length: " + byteArray.length);
-      //       await sendByteArrayToUnity(byteArray);
-      //     }
-      // });
-
-      // function byteArrayToBase64(byteArray) {
-      //   let binaryString = '';
-      //   const chunkSize = 8192; // Process 8192 bytes at a time
-
-      //   for (let i = 0; i < byteArray.length; i += chunkSize) {
-      //       const chunk = byteArray.subarray(i, i + chunkSize);
-      //       binaryString += String.fromCharCode(...chunk);
-      //   }
-      //   return btoa(binaryString); // Convert to Base64
-      // }
-
-      // async function sendByteArrayToUnity(byteArray) {
-      //   if (unityInstance) {
-      //       try {
-      //           // Convert Uint8Array to Base64
-      //           const base64String = byteArrayToBase64(byteArray);
-      //           // Send Base64 string to Unity
-      //           unityInstance.SendMessage('FileHandlerObject', 'OnFileSelected', base64String);
-
-      //           console.log("File sent to Unity successfully.");
-      //       } catch (error) {
-      //           console.error("Error sending file to Unity:", error);
-      //       }
-      //   } else {
-      //       console.error("UnityInstance is not initialized yet.");
-      //   }
-      // }
-
     </script>
   </body>
 </html>
